--- a/.github/workflows/terralint.yml
+++ b/.github/workflows/terralint.yml
@@ -2,9 +2,9 @@ name: Terralint Scan
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   terralint:
